--- a/.github/workflows/super-linter.yaml
+++ b/.github/workflows/super-linter.yaml
@@ -26,12 +26,12 @@ jobs:
           fetch-depth: 0
 
       - name: Super-Linter
-        uses: github/super-linter/slim@v6
+        uses: github/super-linter/slim@v7
         env:
           VALIDATE_ALL_CODEBASE: true
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FILTER_REGEX_EXCLUDE: (doc/content/.*|extra/tools/fmi/vendor/.*)
+          FILTER_REGEX_EXCLUDE: (doc/content/.*|(^|/)vendor/)
           VALIDATE_CPP: true
           VALIDATE_DOCKERFILE: true
           # VALIDATE_GO: true
