Runnable FMU example.
Signed-off-by: Timothy Rule (VM/EMT3) <Timothy.Rule@de.bosch.com>

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -28,3 +28,8 @@ build:
 	@for d in $(SUBDIRS); do ($(MAKE) -C $$d build ); done
 	$(MAKE) generate
 
+.PHONY: clean
+clean:
+
+.PHONY: cleanall
+cleanall:
