--- a/lsp/server/package.json
+++ b/lsp/server/package.json
@@ -17,5 +17,8 @@
         "vscode-languageserver": "^9.0.1",
         "vscode-languageserver-textdocument": "^1.0.11"
     },
-    "scripts": {}
+    "scripts": {},
+    "devDependencies": {
+        "@types/node": "^14.18.45"
+    }
 }
