--- a/.github/workflows/containers.yaml
+++ b/.github/workflows/containers.yaml
@@ -7,8 +7,6 @@ on:  # yamllint disable-line rule:truthy
     branches: [main, devel]
     tags:
       - 'v*.*.*'
-  pull_request:
-    branches: [main, devel]
 
 permissions:
   contents: read
@@ -22,7 +20,6 @@ env:
 
 jobs:
   containers:
-    if: startsWith(github.ref, 'refs/tags/')
     permissions:
       packages: write
     runs-on: [ubuntu-latest]
@@ -67,7 +64,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          push: true
+          push: startsWith(github.ref, 'refs/tags/')
           context: ${{ matrix.context }}
           file: ${{ matrix.dockerfile }}
           build-args: |
