--- a/.github/workflows/containers.yaml
+++ b/.github/workflows/containers.yaml
@@ -64,7 +64,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          push: startsWith(github.ref, 'refs/tags/')
+          push: ${{ startsWith(github.ref, 'refs/tags/') }}
           context: ${{ matrix.context }}
           file: ${{ matrix.dockerfile }}
           build-args: |
