--- a/lsp/server/package.json
+++ b/lsp/server/package.json
@@ -12,13 +12,14 @@
         "url": ""
     },
     "dependencies": {
-        "https-proxy-agent": "^7.0.5",
+        "https-proxy-agent": "5.0.1",
+        "agent-base": "6.0.2",
         "js-yaml": "^4.1.0",
         "vscode-languageserver": "^9.0.1",
         "vscode-languageserver-textdocument": "^1.0.11"
-    },
-    "scripts": {},
+        },
     "devDependencies": {
-        "@types/node": "^14.18.45"
-    }
+        "@types/node": "18.18.6"
+    },
+    "scripts": {}
 }
