--- a/.devcontainer/devcontainer.env
+++ b/.devcontainer/devcontainer.env
@@ -1,4 +1,5 @@
 DSE_MODELC_VERSION=2.1.30
+DSE_BUILDER_IMAGE=ghcr.io/boschglobal/dse-builder:latest
 DSE_SIMER_IMAGE=ghcr.io/boschglobal/dse-simer:latest
 DSE_REPORT_IMAGE=ghcr.io/boschglobal/dse-report:latest
 TASK_X_REMOTE_TASKFILES=1
