--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,7 @@
     ],
     "remoteEnv": {},
     "onCreateCommand": [],
-    "postCreateCommand": "make && make install",
+//    "postCreateCommand": "make && make install",
     "forwardPorts": [3001],
     "portsAttributes": {
         "2159": {
