--- a/doc/Makefile
+++ b/doc/Makefile
@@ -2,10 +2,16 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 
+
+## Docker Images.
+DSE_PLANTUML_IMAGE ?= dse-plantuml:latest
+
 SUBDIRS := html2img
 PWD := $(shell pwd)
 STATIC_DIR := static
 OUTPUT_IMG := content/docs/user/tools/dsl/syntax_diagrams.png
+MD_DOCS := $(shell find content/docs -name "*.md")
+
 export DOCKER_IMAGE := html2img
 export DOCKER_BUILDER_CMD := docker run --rm -v $(PWD):/work $(DOCKER_IMAGE) $(STATIC_DIR)/syntax_diagrams.html $(OUTPUT_IMG)
 
@@ -33,3 +39,15 @@ clean:
 
 .PHONY: cleanall
 cleanall:
+
+## Plant UML
+.PHONY: generate_images
+generate_images: $(MD_DOCS)
+	docker run -it --rm \
+		--volume $$(pwd):/tmp/repo \
+		--workdir /tmp/repo \
+		$(DSE_PLANTUML_IMAGE) \
+			-tpng  $^
+
+.PHONY: generate
+generate: generate_images
