--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,6 +3,12 @@ name: CI
 
 on:  # yamllint disable-line rule:truthy
   workflow_dispatch:
+  push:
+    branches: [main, devel]
+    tags:
+      - 'v*.*.*'
+  pull_request:
+    branches: [main, devel]
 
 permissions:
   contents: read
@@ -15,11 +21,83 @@ env:
   PACKAGE_VERSION: 0.0.2
 
 jobs:
-  report:
-    if: startsWith(github.ref, 'refs/tags/')
-    permissions:
-      packages: write
+  build:
     runs-on: [ubuntu-latest]
+    strategy:
+      matrix:
+        package_arch:
+          - linux-amd64
+          - linux-x86
+          - linux-i386
+    container:
+      image: ghcr.io/boschglobal/dse-gcc-builder:main
     steps:
       - name: Checkout
         uses: actions/checkout@v5
+
+      - name: Build package metadata
+        id: package_meta
+        uses: docker/metadata-action@v5
+        with:
+          images: dse/sdp
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+
+      - name: Get package version
+        if: startsWith(github.ref, 'refs/tags/')
+        id: package
+        run: |
+          echo "PACKAGE_VERSION=${{ fromJSON(steps.package_meta.outputs.json).labels['org.opencontainers.image.version'] }}" >> $GITHUB_ENV
+
+      - name: Build
+        env:
+          PACKAGE_ARCH: ${{ matrix.package_arch }}
+        run: |
+          make examples
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: Models-${{ matrix.package_arch }}-package
+          path: |
+            examples/models/build/_dist/Models-${{ env.PACKAGE_VERSION }}-${{ matrix.package_arch }}.zip
+          retention-days: 1
+
+  publish_examples:
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: [ubuntu-latest]
+    needs: [build]
+    permissions:
+      contents: write
+      packages: write
+    strategy:
+      matrix:
+        package_arch:
+          - linux-amd64
+          - linux-x86
+          - linux-i386
+    steps:
+      - name: Build package metadata
+        id: package_meta
+        uses: docker/metadata-action@v5
+        with:
+          images: dse/sdp
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+
+      - name: Get package version
+        if: startsWith(github.ref, 'refs/tags/')
+        id: package
+        run: |
+          echo "PACKAGE_VERSION=${{ fromJSON(steps.package_meta.outputs.json).labels['org.opencontainers.image.version'] }}" >> $GITHUB_ENV
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: Models-${{ matrix.package_arch }}-package
+
+      - name: Publish
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            Models-${{ env.PACKAGE_VERSION }}-${{ matrix.package_arch }}.zip
