Fix example model package versioning.
Signed-off-by: Timothy Rule (VM/EMT3) <Timothy.Rule@de.bosch.com>

--- a/examples/models/CMakeLists.txt
+++ b/examples/models/CMakeLists.txt
@@ -11,11 +11,11 @@ elseif ($ENV{PACKAGE_ARCH} MATCHES "linux-i386")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m32")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32")
 elseif ($ENV{PACKAGE_ARCH} MATCHES "linux-x86")
-    set(CMAKE_SYSTEM_NAME Linux)
-    set(CMAKE_C_FLAGS -mx32)
-    set(CMAKE_CXX_FLAGS -mx32)
+set(CMAKE_SYSTEM_NAME Linux)
+set(CMAKE_C_FLAGS -mx32)
+set(CMAKE_CXX_FLAGS -mx32)
 else()
-    message(FATAL_ERROR "Unsupported package arch!")
+message(FATAL_ERROR "Unsupported package arch!")
 endif ()
 
 message(PACKAGE_VERSION="$ENV{PACKAGE_VERSION}")
@@ -24,10 +24,12 @@ message(PLATFORM_OS="$ENV{PLATFORM_OS}")
 message(PLATFORM_ARCH="$ENV{PLATFORM_ARCH}")
 message(DSE_MODELC_LIB_URL="$ENV{DSE_MODELC_LIB_URL}")
 
-project(Models)
+project(Models
+    VERSION $ENV{PACKAGE_VERSION}
+    DESCRIPTION "DSE DSP Example Models"
+)
 include(GNUInstallDirs)
 include(FetchContent)
-set(VERSION "$ENV{PACKAGE_VERSION}")
 set(CDEF_PLATFORM_OS $ENV{PLATFORM_OS})
 set(CDEF_PLATFORM_ARCH $ENV{PLATFORM_ARCH})
 set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/_out)
