--- a/.github/workflows/containers.yaml
+++ b/.github/workflows/containers.yaml
@@ -7,6 +7,8 @@ on:  # yamllint disable-line rule:truthy
     branches: [main, devel]
     tags:
       - 'v*.*.*'
+  pull_request:
+    branches: [main, devel]
 
 permissions:
   contents: read
