Report for Channel name consistency.
Signed-off-by: Timothy Rule (VM/EMT3) <Timothy.Rule@de.bosch.com>

--- a/graph/cmd/graph/reports/stack.yaml
+++ b/graph/cmd/graph/reports/stack.yaml
@@ -12,6 +12,7 @@ queries:
 
 tags:
   - stack
+  - report_modelinstance_name
 ---
 name: Model UID Check
 queries:
@@ -26,3 +27,4 @@ queries:
 
 tags:
   - stack
+  - report_model_uid
