--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,7 +64,7 @@ jobs:
   publish_examples:
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: [ubuntu-latest]
-    needs: [build]
+    needs: [build, release]
     permissions:
       contents: write
       packages: write
@@ -75,27 +75,33 @@ jobs:
           - linux-x86
           - linux-i386
     steps:
-      - name: Build package metadata
-        id: package_meta
-        uses: docker/metadata-action@v5
-        with:
-          images: dse/sdp
-          tags: |
-            type=ref,event=branch
-            type=semver,pattern={{version}}
-
-      - name: Get package version
-        if: startsWith(github.ref, 'refs/tags/')
-        id: package
-        run: |
-          echo "PACKAGE_VERSION=${{ fromJSON(steps.package_meta.outputs.json).labels['org.opencontainers.image.version'] }}" >> $GITHUB_ENV
+      - name: Checkout
+        uses: actions/checkout@v5
 
       - uses: actions/download-artifact@v4
         with:
           name: Models-${{ matrix.package_arch }}-package
 
-      - name: Publish
-        uses: softprops/action-gh-release@v2
-        with:
-          files: |
-            Models-${{ env.PACKAGE_VERSION }}-${{ matrix.package_arch }}.zip
+      - name: Upload file
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ github.ref_name }}
+        run: |
+          gh release upload $tag Models-${{ env.PACKAGE_VERSION }}-${{ matrix.package_arch }}.zip --clobber
+
+  release:
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: [ubuntu-latest]
+    needs: [build]
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+
+      - name: Create Release from Tag
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ github.ref_name }}
+        run: |
+          gh release create "$tag" --notes-from-tag
