--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,35 +23,6 @@ env:
 jobs:
   build:
     runs-on: [ubuntu-latest]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v5
-
-      - name: Build package metadata
-        id: package_meta
-        uses: docker/metadata-action@v5
-        with:
-          images: dse/sdp
-          tags: |
-            type=ref,event=branch
-            type=semver,pattern={{version}}
-
-      - name: Get package version
-        if: startsWith(github.ref, 'refs/tags/')
-        id: package
-        run: |
-          echo "PACKAGE_VERSION=${{ fromJSON(steps.package_meta.outputs.json).labels['org.opencontainers.image.version'] }}" >> $GITHUB_ENV
-
-      - name: Build
-        run: |
-          make
-
-      - name: Test
-        run: |
-          make test
-
-  examples:
-    runs-on: [ubuntu-latest]
     strategy:
       matrix:
         package_arch:
@@ -77,7 +48,7 @@ jobs:
         run: |
           echo "PACKAGE_VERSION=${{ fromJSON(steps.package_meta.outputs.json).labels['org.opencontainers.image.version'] }}" >> $GITHUB_ENV
 
-      - name: Examples
+      - name: Build
         env:
           PACKAGE_ARCH: ${{ matrix.package_arch }}
         run: |
@@ -93,7 +64,7 @@ jobs:
   publish_examples:
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: [ubuntu-latest]
-    needs: [build, examples]
+    needs: [build]
     permissions:
       contents: write
       packages: write
