--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,10 +61,28 @@ jobs:
             examples/models/build/_dist/Models-${{ env.PACKAGE_VERSION }}-${{ matrix.package_arch }}.zip
           retention-days: 1
 
-  publish_examples:
+  release:
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: [ubuntu-latest]
     needs: [build]
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+
+      - name: Create Release from Tag
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ github.ref_name }}
+        run: |
+          gh release create "$tag" \
+            --notes-from-tag
+
+  publish_examples:
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: [ubuntu-latest]
+    needs: [build, release]
     permissions:
       contents: write
       packages: write
@@ -75,6 +93,9 @@ jobs:
           - linux-x86
           - linux-i386
     steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+
       - name: Build package metadata
         id: package_meta
         uses: docker/metadata-action@v5
@@ -83,7 +104,6 @@ jobs:
           tags: |
             type=ref,event=branch
             type=semver,pattern={{version}}
-
       - name: Get package version
         if: startsWith(github.ref, 'refs/tags/')
         id: package
@@ -94,8 +114,10 @@ jobs:
         with:
           name: Models-${{ matrix.package_arch }}-package
 
-      - name: Publish
-        uses: softprops/action-gh-release@v2
-        with:
-          files: |
+      - name: Upload Release Asset
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ github.ref_name }}
+        run: |
+          gh release upload "$tag" \
             Models-${{ env.PACKAGE_VERSION }}-${{ matrix.package_arch }}.zip
