--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -120,5 +120,4 @@ jobs:
           tag: ${{ github.ref_name }}
         run: |
           gh release upload "$tag" \
-            Models-${{ env.PACKAGE_VERSION }}-${{ matrix.package_arch }}.zip \
-            --clobber
+            Models-${{ env.PACKAGE_VERSION }}-${{ matrix.package_arch }}.zip
