--- a/doc/html2img/Dockerfile
+++ b/doc/html2img/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:bookworm AS builder
+FROM golang:bullseye AS builder
 
 WORKDIR /app
 COPY go.mod go.sum ./
@@ -6,7 +6,7 @@ RUN go mod download
 COPY . .
 RUN go build -o /html2img main.go
 
-FROM debian:bookworm-slim
+FROM debian:bullseye-slim
 
 RUN apt-get update && \
     apt-get install -y wget gnupg ca-certificates && \
