--- a/examples/models/Makefile
+++ b/examples/models/Makefile
@@ -11,7 +11,7 @@ DSE_MODELC_REPO ?= https://github.com/boschglobal/dse.modelc
 DSE_MODELC_VERSION ?= 2.1.32
 export DSE_MODELC_LIB_URL ?= $(DSE_MODELC_REPO)/releases/download/v$(DSE_MODELC_VERSION)/ModelC-$(DSE_MODELC_VERSION)-$(PACKAGE_ARCH).zip
 
-GCC_BUILDER_IMAGE ?= ghcr.io/boschglobal/dse-gcc-builder:main
+GCC_BUILDER_IMAGE ?= ghcr.io/boschglobal/dse-gcc-builder:latest
 DOCKER_BUILDER_CMD := docker run -t --rm \
 	--user $$(id -u):$$(id -g) \
 	--env PACKAGE_ARCH=$(PACKAGE_ARCH) \
