--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -13,7 +13,9 @@ metadata:
       name: Simple
       displayName: Simple
       path: simple
-      workflows: []
+      workflows:
+        - filedownload
+        - message
       platforms:
         - linux-amd64
         - linux-x86
@@ -49,3 +51,22 @@ tasks:
       - echo "{{.ENTRYDIR}}"
       - echo "{{.SDP_IMAGE}}"
       - echo "{{.IMAGE_TAG}}"
+
+  message:
+    run: always
+    dir: '{{.USER_WORKING_DIR}}'
+    label: dse:sdp:message
+    cmds:
+      - echo "MSG={{.MSG}}"
+    requires:
+      vars: [MSG]
+
+  filedownload:
+    desc: Print contents of downloaded file
+    run: when_changed
+    dir: '{{.USER_WORKING_DIR}}'
+    label: dse:sdp:filedownload
+    cmds:
+      - cat "{{.USER_WORKING_DIR}}/{{.OUTDIR}}/{{.FILE}}"
+    requires:
+      vars: [FILE]
