--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -234,6 +234,8 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: [ubuntu-latest]
     needs: [release]
+    permissions:
+      packages: write
     strategy:
       matrix:
         container:
