Gateway E2E test updates.
Signed-off-by: Timothy Rule (VM/EMT3) <Timothy.Rule@de.bosch.com>

--- a/examples/gateway/Makefile
+++ b/examples/gateway/Makefile
@@ -10,7 +10,8 @@ export DSE_SIMER_IMAGE=ghcr.io/boschglobal/dse-simer:latest
 export SIM_PATH := $(CURDIR)/out/sim
 export ABS_PATH := $(abspath $(CURDIR)/../..)
 export LD_LIBRARY_PATH=$(ABS_PATH)/examples/models/build/_deps/dse_modelc_lib-src/examples/runtime/lib
-export GATEWAY_PATH := $(ABS_PATH)/examples/models/build/_out/gateway/bin/gateway
+export EXAMPLE_MODELS := $(ABS_PATH)/examples/models
+export GATEWAY_PATH := $(EXAMPLE_MODELS)/build/_out/gateway/bin/gateway
 
 export DSE_FILE := gateway.dse
 export STACK := model
@@ -34,7 +35,7 @@ report:
 
 .PHONY: simer
 simer:
-	docker run --name simer -d --rm\
+	docker run --name simer -d --rm \
 		-v $(SIM_PATH):/sim \
 		--network=host \
 		$(DSE_SIMER_IMAGE) \
@@ -44,11 +45,11 @@ simer:
 
 .PHONY: gateway
 gateway:
-	$(GATEWAY_PATH) 0.0005 0.005 ./gw.yaml
+	$(GATEWAY_PATH) 0.0005 0.005 $(EXAMPLE_MODELS)/gateway/simulation.yaml $(EXAMPLE_MODELS)/gateway/signalgroup.yaml $(EXAMPLE_MODELS)/gateway/model.yaml
 
 
 .PHONY: clean
 clean:
 	rm -rf out
 	rm -rf .task
-	rm -f -- *.yml *.json $(filter-out signalgroup.yaml gw.yaml,$(wildcard *.yaml))
+	rm -f -- *.yml *.json $(filter-out input_signalgroup.yaml,$(wildcard *.yaml))
