Add TASK_X_REMOTE_TASKFILES environment variable for Task step.
Signed-off-by: Timothy Rule <90191439+timrulebosch@users.noreply.github.com>

--- a/.github/workflows/run_sdp_project.yml
+++ b/.github/workflows/run_sdp_project.yml
@@ -82,6 +82,7 @@ jobs:
             -e GHE_USER="${{ secrets.GHE_USER }}" \
             -e GHE_TOKEN="${{ secrets.GHE_TOKEN }}" \
             -e GHE_PAT="${{ secrets.GHE_PAT }}" \
+            -e TASK_X_REMOTE_TASKFILES=1 \
             ghcr.io/boschglobal/dse-builder:latest \
             -y -v
 
