Change Docker entrypoint to use bash for task
Signed-off-by: Timothy Rule <90191439+timrulebosch@users.noreply.github.com>

--- a/.github/workflows/run_sdp_project.yml
+++ b/.github/workflows/run_sdp_project.yml
@@ -77,14 +77,14 @@ jobs:
         run: |
           docker run \
             --rm \
-            --entrypoint /usr/local/bin/task \
+            --entrypoint /bin/bash \
             -v "${{ github.workspace }}/${{ steps.projectdir.outputs.project_dir }}:/workdir" \
             -e GHE_USER="${{ secrets.GHE_USER }}" \
             -e GHE_TOKEN="${{ secrets.GHE_TOKEN }}" \
             -e GHE_PAT="${{ secrets.GHE_PAT }}" \
             -e TASK_X_REMOTE_TASKFILES=1 \
             ghcr.io/boschglobal/dse-builder:latest \
-            -y -v
+            -c 'task -y -v'
 
       - name: Ensure simulation output directory exists
         run: |
