--- a/.github/workflows/run_sdp_project.yml
+++ b/.github/workflows/run_sdp_project.yml
@@ -43,6 +43,11 @@ on:  # yamllint disable-line rule:truthy
         description: "GitHub Enterprise personal access token"
         required: true
 
+permissions:
+  contents: read
+  pull-requests: read
+  packages: read
+  
 jobs:
   build-and-simulate:
     name: Builder and Simer Sequential Run
@@ -74,21 +79,19 @@ jobs:
               "$(basename "${{ inputs.script }}")"
 
       - name: Run Task
+        env:
+          GHE_USER: "${{ secrets.GHE_USER }}"
+          GHE_TOKEN: "${{ secrets.GHE_TOKEN }}"
+          GHE_PAT: "${{ secrets.GHE_PAT }}"
+          TASK_X_REMOTE_TASKFILES: 1
+        working-directory: ${{ github.workspace }}/${{ steps.projectdir.outputs.project_dir }}
         run: |
-          docker run \
-            --rm \
-            --entrypoint /bin/bash \
-            -v "${{ github.workspace }}/${{ steps.projectdir.outputs.project_dir }}:/workdir" \
-            -e GHE_USER="${{ secrets.GHE_USER }}" \
-            -e GHE_TOKEN="${{ secrets.GHE_TOKEN }}" \
-            -e GHE_PAT="${{ secrets.GHE_PAT }}" \
-            -e TASK_X_REMOTE_TASKFILES=1 \
-            ghcr.io/boschglobal/dse-builder:latest \
-            -c 'task -y -v'
+          go install github.com/boschglobal/task/v3/cmd/task@latest
+          task -y -v
 
       - name: Ensure simulation output directory exists
         run: |
-          SIMDIR="${{ github.workspace }}/${{ steps.set_projectdir.outputs.project_dir }}/out/sim"
+          SIMDIR="${{ github.workspace }}/${{ steps.projectdir.outputs.project_dir }}/out/sim"
           if [ ! -d "$SIMDIR" ]; then
             echo "Simer input directory '$SIMDIR' does not exist!"
             exit 1
