Fix user permissions in Docker run commands
Signed-off-by: Timothy Rule <90191439+timrulebosch@users.noreply.github.com>

--- a/.github/workflows/run_sdp_project.yml
+++ b/.github/workflows/run_sdp_project.yml
@@ -71,6 +71,7 @@ jobs:
         run: |
           docker run \
             --rm \
+            --user "$(id -u):$(id -g)" \
             -v "${{ github.workspace }}/${{ steps.projectdir.outputs.project_dir }}:/workdir" \
             -e GHE_USER="${{ secrets.GHE_USER }}" \
             -e GHE_TOKEN="${{ secrets.GHE_TOKEN }}" \
@@ -105,6 +106,7 @@ jobs:
         run: |
           docker run \
             --rm \
+            --user "$(id -u):$(id -g)" \
             -v "${{ github.workspace }}/${{ steps.projectdir.outputs.project_dir }}/out/sim:/sim" \
             -e SIMBUS_TRANSPORT="${{ inputs.transport }}" \
             -e SIMBUS_URI="${{ inputs.uri }}" \
