--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -94,11 +94,11 @@ jobs:
         with:
           images: |
             name=${{ env.REGISTRY }}/${{ env.IMAGE_BASE_NAME }}-${{ matrix.name }},enable={{ startsWith(github.ref, 'refs/tags/') }}
-            name=${{ matrix.name }},enable={{ !startsWith(github.ref, 'refs/tags/') }}
+            name=${{ matrix.name }},enable=${{ !startsWith(github.ref, 'refs/tags/') }}
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
-            type=raw,value=test,enable=,enable={{ !startsWith(github.ref, 'refs/tags/') }}
+            type=raw,value=test,enable=,enable=${{ !startsWith(github.ref, 'refs/tags/') }}
 
       - name: Version
         if: startsWith(github.ref, 'refs/tags/')
