--- a/doc/Makefile
+++ b/doc/Makefile
@@ -4,12 +4,12 @@
 
 
 ## Docker Images.
-DSE_PLANTUML_IMAGE ?= dse-plantuml:latest
+DSE_PLANTUML_IMAGE ?= ghcr.io/boschglobal/dse-plantuml:latest
 
 SUBDIRS := html2img
 PWD := $(shell pwd)
 STATIC_DIR := static
-OUTPUT_IMG := content/docs/user/tools/dsl/syntax_diagrams.png
+OUTPUT_IMG := content/docs/tools/dsl/syntax_diagrams.png
 MD_DOCS := $(shell find content/docs -name "*.md")
 
 export DOCKER_IMAGE := html2img
