--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -139,6 +139,21 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
 
+      - name: Build package metadata
+        id: package_meta
+        uses: docker/metadata-action@v5
+        with:
+          images: dse/sdp
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+
+      - name: Get package version
+        if: startsWith(github.ref, 'refs/tags/')
+        id: package
+        run: |
+          echo "PACKAGE_VERSION=${{ fromJSON(steps.package_meta.outputs.json).labels['org.opencontainers.image.version'] }}" >> $GITHUB_ENV
+
       - name: Download artifact
         uses: actions/download-artifact@v5
         with:
