SDP support for Lua models.
Co-authored-by: Timothy Rule (VM/EMT3) <Timothy.Rule@de.bosch.com>
Signed-off-by: Timothy Rule (VM/EMT3) <Timothy.Rule@de.bosch.com>

--- a/examples/openloop_lua/Makefile
+++ b/examples/openloop_lua/Makefile
@@ -18,17 +18,13 @@ build:
 		$(DSE_BUILDER_IMAGE) openloop.dse
 	task -y -v
 
-.PHONY: report
-report:
-	docker run -it --rm \
-		--volume $$(pwd)/out/sim:/sim \
-		$(DSE_REPORT_IMAGE) report /sim
-
 .PHONY: simer
 simer:
 	docker run -it --rm \
 		--volume $$(pwd)/out/sim:/sim \
-		$(DSE_SIMER_IMAGE)
+		$(DSE_SIMER_IMAGE) \
+        	-env SIMBUS_LOGLEVEL=5 \
+        	-env linear:SIMBUS_LOGLEVEL=4
 
 .PHONY: clean
 clean:
